fixed username not visible after login

--- a/components/Navbar-temp/styles.module.css
+++ b/components/Navbar-temp/styles.module.css
@@ -101,6 +101,7 @@
 
 .user_name {
     font-size: 18px;
+    color: #000000;
 }
 
 .user_id {
